create h1 id="psw"

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-    
-    <!-- embending js -->
-    <script type=”text/javascript” src="JS/myjs.js"></script>
 
+    <h1 id="psw"></h1>
+
+    <!-- embending js -->
+    <script type="text/javascript" src="JS/myjs.js"></script>
+    
 </body>
 </html>
